istio/descriptors/service/deployment.yaml
# Copyright 2019 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License. 

apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "pubsub-proxy"
  namespace: "default"
  labels:
    app: "pubsub-proxy"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "pubsub-proxy"
  template:
    metadata:
      labels:
        app: "pubsub-proxy"
        version: v1
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: clientsecret
      containers:
      - name: "pubsub-proxy"
        image: "gcr.io/[PROJECT_ID]/pubsub-proxy:v1"
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
	ports:
        - name: livered-port
          containerPort: 8080
          hostPort: 8080
	readinessProbe:
          httpGet:
             path: /
             port: livered-port
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
             path: /
             port: livered-port
          initialDelaySeconds: 5
          periodSeconds: 10
